--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ FREELANCING : info@uexel.com
 
 */
 
-@import url("fancybox.css");			/* FancyBox Styles */ 
+/*@import url("fancybox.css");			/* FancyBox Styles */ 
 
 html,
 body {
