--- a/css/pricing-table.css
+++ b/css/pricing-table.css
@@ -7,7 +7,7 @@ body {
    * and these styles are not required to integrate the pricing table
    * into your application */
   padding-bottom: 50px;
-  background-image: url('../images/background.png');
+  /*background-image: url('../images/background.png');*/
 }
 
 /*
